--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "js-yaml": "^4.1.0",
     "mineflayer": "^4.26.0",
     "mineflayer-pathfinder": "^2.4.5",
-    "socks": "^2.8.3"
+    "socks": "^2.8.3",
+    "vec3": "^0.1.10"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.7",
@@ -22,7 +23,9 @@
     "jest": "^29.7.0"
   },
   "babel": {
-    "presets": ["@babel/preset-env"]
+    "presets": [
+      "@babel/preset-env"
+    ]
   },
   "jest": {
     "transform": {
